--- a/front-end/src/assets/styles/index.css
+++ b/front-end/src/assets/styles/index.css
@@ -1,3 +1,4 @@
+@import 'bootstrap/dist/css/bootstrap.min.css';
 :root {
   font-family: Inter, system-ui, Avenir, Helvetica, Arial, sans-serif;
   line-height: 1.5;
@@ -148,4 +149,15 @@ label {
   font-size: 14px;
   margin-top: -10px;
   margin-bottom: 15px;
+}
+.navbar {
+  background-color: #333;
+  padding: 1rem;
+}
+
+.hero-btn {
+  color: white;
+  background-color: #007bff;
+  padding: 10px 20px;
+  text-decoration: none;
 }
