--- a/front-end/src/assets/styles/index.css
+++ b/front-end/src/assets/styles/index.css
@@ -150,10 +150,10 @@ label {
   margin-top: -10px;
   margin-bottom: 15px;
 }
-.navbar {
+/* .navbar {
   background-color: #333;
   padding: 1rem;
-}
+} */
 
 .hero-btn {
   color: white;
